src/DecafGrammar/generated/DecafParser.cpp

// Generated from DecafParser.g4 by ANTLR 4.7.2


#include "DecafParserListener.h"

#include "DecafParser.h"


using namespace antlrcpp;
using namespace antlr4;

DecafParser::DecafParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

DecafParser::~DecafParser() {
  delete _interpreter;
}

std::string DecafParser::getGrammarFileName() const {
  return "DecafParser.g4";
}

const std::vector<std::string>& DecafParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& DecafParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

DecafParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DecafParser::ProgramContext::EOF() {
  return getToken(DecafParser::EOF, 0);
}

std::vector<DecafParser::Import_declContext *> DecafParser::ProgramContext::import_decl() {
  return getRuleContexts<DecafParser::Import_declContext>();
}

DecafParser::Import_declContext* DecafParser::ProgramContext::import_decl(size_t i) {
  return getRuleContext<DecafParser::Import_declContext>(i);
}

std::vector<DecafParser::Field_declContext *> DecafParser::ProgramContext::field_decl() {
  return getRuleContexts<DecafParser::Field_declContext>();
}

DecafParser::Field_declContext* DecafParser::ProgramContext::field_decl(size_t i) {
  return getRuleContext<DecafParser::Field_declContext>(i);
}

std::vector<DecafParser::Method_declContext *> DecafParser::ProgramContext::method_decl() {
  return getRuleContexts<DecafParser::Method_declContext>();
}

DecafParser::Method_declContext* DecafParser::ProgramContext::method_decl(size_t i) {
  return getRuleContext<DecafParser::Method_declContext>(i);
}


size_t DecafParser::ProgramContext::getRuleIndex() const {
  return DecafParser::RuleProgram;
}

void DecafParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void DecafParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

DecafParser::ProgramContext* DecafParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, DecafParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(51);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DecafParser::IMPORT) {
      setState(48);
      import_decl();
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(57);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(54);
        field_decl(); 
      }
      setState(59);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << DecafParser::VOID)
      | (1ULL << DecafParser::INT)
      | (1ULL << DecafParser::LONG)
      | (1ULL << DecafParser::BOOL))) != 0)) {
      setState(60);
      method_decl();
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(66);
    match(DecafParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Import_declContext ------------------------------------------------------------------

DecafParser::Import_declContext::Import_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DecafParser::Import_declContext::IMPORT() {
  return getToken(DecafParser::IMPORT, 0);
}

tree::TerminalNode* DecafParser::Import_declContext::ID() {
  return getToken(DecafParser::ID, 0);
}

tree::TerminalNode* DecafParser::Import_declContext::SEMI() {
  return getToken(DecafParser::SEMI, 0);
}


size_t DecafParser::Import_declContext::getRuleIndex() const {
  return DecafParser::RuleImport_decl;
}

void DecafParser::Import_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImport_decl(this);
}

void DecafParser::Import_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImport_decl(this);
}

DecafParser::Import_declContext* DecafParser::import_decl() {
  Import_declContext *_localctx = _tracker.createInstance<Import_declContext>(_ctx, getState());
  enterRule(_localctx, 2, DecafParser::RuleImport_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(DecafParser::IMPORT);
    setState(69);
    match(DecafParser::ID);
    setState(70);
    match(DecafParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Field_declContext ------------------------------------------------------------------

DecafParser::Field_declContext::Field_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DecafParser::TypeContext* DecafParser::Field_declContext::type() {
  return getRuleContext<DecafParser::TypeContext>(0);
}

tree::TerminalNode* DecafParser::Field_declContext::SEMI() {
  return getToken(DecafParser::SEMI, 0);
}

std::vector<tree::TerminalNode *> DecafParser::Field_declContext::ID() {
  return getTokens(DecafParser::ID);
}

tree::TerminalNode* DecafParser::Field_declContext::ID(size_t i) {
  return getToken(DecafParser::ID, i);
}

std::vector<DecafParser::Array_field_declContext *> DecafParser::Field_declContext::array_field_decl() {
  return getRuleContexts<DecafParser::Array_field_declContext>();
}

DecafParser::Array_field_declContext* DecafParser::Field_declContext::array_field_decl(size_t i) {
  return getRuleContext<DecafParser::Array_field_declContext>(i);
}

std::vector<tree::TerminalNode *> DecafParser::Field_declContext::COMMA() {
  return getTokens(DecafParser::COMMA);
}

tree::TerminalNode* DecafParser::Field_declContext::COMMA(size_t i) {
  return getToken(DecafParser::COMMA, i);
}


size_t DecafParser::Field_declContext::getRuleIndex() const {
  return DecafParser::RuleField_decl;
}

void DecafParser::Field_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterField_decl(this);
}

void DecafParser::Field_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitField_decl(this);
}

DecafParser::Field_declContext* DecafParser::field_decl() {
  Field_declContext *_localctx = _tracker.createInstance<Field_declContext>(_ctx, getState());
  enterRule(_localctx, 4, DecafParser::RuleField_decl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    type();
    setState(75);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      setState(73);
      match(DecafParser::ID);
      break;
    }

    case 2: {
      setState(74);
      array_field_decl();
      break;
    }

    }
    setState(84);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DecafParser::COMMA) {
      setState(77);
      match(DecafParser::COMMA);
      setState(80);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
      case 1: {
        setState(78);
        match(DecafParser::ID);
        break;
      }

      case 2: {
        setState(79);
        array_field_decl();
        break;
      }

      }
      setState(86);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(87);
    match(DecafParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Array_field_declContext ------------------------------------------------------------------

DecafParser::Array_field_declContext::Array_field_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DecafParser::Array_field_declContext::ID() {
  return getToken(DecafParser::ID, 0);
}

tree::TerminalNode* DecafParser::Array_field_declContext::SOP() {
  return getToken(DecafParser::SOP, 0);
}

tree::TerminalNode* DecafParser::Array_field_declContext::INT_LITERAL() {
  return getToken(DecafParser::INT_LITERAL, 0);
}

tree::TerminalNode* DecafParser::Array_field_declContext::SCL() {
  return getToken(DecafParser::SCL, 0);
}


size_t DecafParser::Array_field_declContext::getRuleIndex() const {
  return DecafParser::RuleArray_field_decl;
}

void DecafParser::Array_field_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArray_field_decl(this);
}

void DecafParser::Array_field_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArray_field_decl(this);
}

DecafParser::Array_field_declContext* DecafParser::array_field_decl() {
  Array_field_declContext *_localctx = _tracker.createInstance<Array_field_declContext>(_ctx, getState());
  enterRule(_localctx, 6, DecafParser::RuleArray_field_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(DecafParser::ID);
    setState(90);
    match(DecafParser::SOP);
    setState(91);
    match(DecafParser::INT_LITERAL);
    setState(92);
    match(DecafParser::SCL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Method_declContext ------------------------------------------------------------------

DecafParser::Method_declContext::Method_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> DecafParser::Method_declContext::ID() {
  return getTokens(DecafParser::ID);
}

tree::TerminalNode* DecafParser::Method_declContext::ID(size_t i) {
  return getToken(DecafParser::ID, i);
}

tree::TerminalNode* DecafParser::Method_declContext::POP() {
  return getToken(DecafParser::POP, 0);
}

tree::TerminalNode* DecafParser::Method_declContext::PCL() {
  return getToken(DecafParser::PCL, 0);
}

DecafParser::BlockContext* DecafParser::Method_declContext::block() {
  return getRuleContext<DecafParser::BlockContext>(0);
}

std::vector<DecafParser::TypeContext *> DecafParser::Method_declContext::type() {
  return getRuleContexts<DecafParser::TypeContext>();
}

DecafParser::TypeContext* DecafParser::Method_declContext::type(size_t i) {
  return getRuleContext<DecafParser::TypeContext>(i);
}

tree::TerminalNode* DecafParser::Method_declContext::VOID() {
  return getToken(DecafParser::VOID, 0);
}

std::vector<tree::TerminalNode *> DecafParser::Method_declContext::COMMA() {
  return getTokens(DecafParser::COMMA);
}

tree::TerminalNode* DecafParser::Method_declContext::COMMA(size_t i) {
  return getToken(DecafParser::COMMA, i);
}


size_t DecafParser::Method_declContext::getRuleIndex() const {
  return DecafParser::RuleMethod_decl;
}

void DecafParser::Method_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMethod_decl(this);
}

void DecafParser::Method_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMethod_decl(this);
}

DecafParser::Method_declContext* DecafParser::method_decl() {
  Method_declContext *_localctx = _tracker.createInstance<Method_declContext>(_ctx, getState());
  enterRule(_localctx, 8, DecafParser::RuleMethod_decl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DecafParser::INT:
      case DecafParser::LONG:
      case DecafParser::BOOL: {
        setState(94);
        type();
        break;
      }

      case DecafParser::VOID: {
        setState(95);
        match(DecafParser::VOID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(98);
    match(DecafParser::ID);
    setState(99);
    match(DecafParser::POP);
    setState(112);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << DecafParser::INT)
      | (1ULL << DecafParser::LONG)
      | (1ULL << DecafParser::BOOL))) != 0)) {
      setState(100);
      type();
      setState(101);
      match(DecafParser::ID);
      setState(109);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == DecafParser::COMMA) {
        setState(103);
        match(DecafParser::COMMA);
        setState(104);
        type();
        setState(105);
        match(DecafParser::ID);
        setState(111);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(114);
    match(DecafParser::PCL);
    setState(115);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

DecafParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DecafParser::BlockContext::COP() {
  return getToken(DecafParser::COP, 0);
}

tree::TerminalNode* DecafParser::BlockContext::CCL() {
  return getToken(DecafParser::CCL, 0);
}

std::vector<DecafParser::Field_declContext *> DecafParser::BlockContext::field_decl() {
  return getRuleContexts<DecafParser::Field_declContext>();
}

DecafParser::Field_declContext* DecafParser::BlockContext::field_decl(size_t i) {
  return getRuleContext<DecafParser::Field_declContext>(i);
}

std::vector<DecafParser::StatementContext *> DecafParser::BlockContext::statement() {
  return getRuleContexts<DecafParser::StatementContext>();
}

DecafParser::StatementContext* DecafParser::BlockContext::statement(size_t i) {
  return getRuleContext<DecafParser::StatementContext>(i);
}


size_t DecafParser::BlockContext::getRuleIndex() const {
  return DecafParser::RuleBlock;
}

void DecafParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void DecafParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

DecafParser::BlockContext* DecafParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 10, DecafParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(DecafParser::COP);
    setState(121);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << DecafParser::INT)
      | (1ULL << DecafParser::LONG)
      | (1ULL << DecafParser::BOOL))) != 0)) {
      setState(118);
      field_decl();
      setState(123);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(127);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << DecafParser::IF)
      | (1ULL << DecafParser::FOR)
      | (1ULL << DecafParser::WHILE)
      | (1ULL << DecafParser::RETURN)
      | (1ULL << DecafParser::BREAK)
      | (1ULL << DecafParser::CONTINUE)
      | (1ULL << DecafParser::ID))) != 0)) {
      setState(124);
      statement();
      setState(129);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(130);
    match(DecafParser::CCL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

DecafParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DecafParser::TypeContext::INT() {
  return getToken(DecafParser::INT, 0);
}

tree::TerminalNode* DecafParser::TypeContext::LONG() {
  return getToken(DecafParser::LONG, 0);
}

tree::TerminalNode* DecafParser::TypeContext::BOOL() {
  return getToken(DecafParser::BOOL, 0);
}


size_t DecafParser::TypeContext::getRuleIndex() const {
  return DecafParser::RuleType;
}

void DecafParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void DecafParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

DecafParser::TypeContext* DecafParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 12, DecafParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << DecafParser::INT)
      | (1ULL << DecafParser::LONG)
      | (1ULL << DecafParser::BOOL))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

DecafParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DecafParser::LocationContext* DecafParser::StatementContext::location() {
  return getRuleContext<DecafParser::LocationContext>(0);
}

DecafParser::Assign_exprContext* DecafParser::StatementContext::assign_expr() {
  return getRuleContext<DecafParser::Assign_exprContext>(0);
}

std::vector<tree::TerminalNode *> DecafParser::StatementContext::SEMI() {
  return getTokens(DecafParser::SEMI);
}

tree::TerminalNode* DecafParser::StatementContext::SEMI(size_t i) {
  return getToken(DecafParser::SEMI, i);
}

DecafParser::Method_callContext* DecafParser::StatementContext::method_call() {
  return getRuleContext<DecafParser::Method_callContext>(0);
}

tree::TerminalNode* DecafParser::StatementContext::IF() {
  return getToken(DecafParser::IF, 0);
}

tree::TerminalNode* DecafParser::StatementContext::POP() {
  return getToken(DecafParser::POP, 0);
}

std::vector<DecafParser::ExprContext *> DecafParser::StatementContext::expr() {
  return getRuleContexts<DecafParser::ExprContext>();
}

DecafParser::ExprContext* DecafParser::StatementContext::expr(size_t i) {
  return getRuleContext<DecafParser::ExprContext>(i);
}

tree::TerminalNode* DecafParser::StatementContext::PCL() {
  return getToken(DecafParser::PCL, 0);
}

std::vector<DecafParser::BlockContext *> DecafParser::StatementContext::block() {
  return getRuleContexts<DecafParser::BlockContext>();
}

DecafParser::BlockContext* DecafParser::StatementContext::block(size_t i) {
  return getRuleContext<DecafParser::BlockContext>(i);
}

tree::TerminalNode* DecafParser::StatementContext::ELSE() {
  return getToken(DecafParser::ELSE, 0);
}

tree::TerminalNode* DecafParser::StatementContext::FOR() {
  return getToken(DecafParser::FOR, 0);
}

tree::TerminalNode* DecafParser::StatementContext::ID() {
  return getToken(DecafParser::ID, 0);
}

tree::TerminalNode* DecafParser::StatementContext::ASSIGN() {
  return getToken(DecafParser::ASSIGN, 0);
}

DecafParser::For_updateContext* DecafParser::StatementContext::for_update() {
  return getRuleContext<DecafParser::For_updateContext>(0);
}

tree::TerminalNode* DecafParser::StatementContext::WHILE() {
  return getToken(DecafParser::WHILE, 0);
}

tree::TerminalNode* DecafParser::StatementContext::RETURN() {
  return getToken(DecafParser::RETURN, 0);
}

tree::TerminalNode* DecafParser::StatementContext::BREAK() {
  return getToken(DecafParser::BREAK, 0);
}

tree::TerminalNode* DecafParser::StatementContext::CONTINUE() {
  return getToken(DecafParser::CONTINUE, 0);
}


size_t DecafParser::StatementContext::getRuleIndex() const {
  return DecafParser::RuleStatement;
}

void DecafParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void DecafParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

DecafParser::StatementContext* DecafParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 14, DecafParser::RuleStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(177);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(134);
      location();
      setState(135);
      assign_expr();
      setState(136);
      match(DecafParser::SEMI);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(138);
      method_call();
      setState(139);
      match(DecafParser::SEMI);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(141);
      match(DecafParser::IF);
      setState(142);
      match(DecafParser::POP);
      setState(143);
      expr(0);
      setState(144);
      match(DecafParser::PCL);
      setState(145);
      block();
      setState(148);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == DecafParser::ELSE) {
        setState(146);
        match(DecafParser::ELSE);
        setState(147);
        block();
      }
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(150);
      match(DecafParser::FOR);
      setState(151);
      match(DecafParser::POP);
      setState(152);
      match(DecafParser::ID);
      setState(153);
      match(DecafParser::ASSIGN);
      setState(154);
      expr(0);
      setState(155);
      match(DecafParser::SEMI);
      setState(156);
      expr(0);
      setState(157);
      match(DecafParser::SEMI);
      setState(158);
      for_update();
      setState(159);
      match(DecafParser::PCL);
      setState(160);
      block();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(162);
      match(DecafParser::WHILE);
      setState(163);
      match(DecafParser::POP);
      setState(164);
      expr(0);
      setState(165);
      match(DecafParser::PCL);
      setState(166);
      block();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(168);
      match(DecafParser::RETURN);
      setState(170);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << DecafParser::POP)
        | (1ULL << DecafParser::INT)
        | (1ULL << DecafParser::LONG)
        | (1ULL << DecafParser::MINUS)
        | (1ULL << DecafParser::NOT)
        | (1ULL << DecafParser::LEN)
        | (1ULL << DecafParser::CHAR_LITERAL)
        | (1ULL << DecafParser::BOOL_LITERAL)
        | (1ULL << DecafParser::INT_LITERAL)
        | (1ULL << DecafParser::LONG_LITERAL)
        | (1ULL << DecafParser::ID))) != 0)) {
        setState(169);
        expr(0);
      }
      setState(172);
      match(DecafParser::SEMI);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(173);
      match(DecafParser::BREAK);
      setState(174);
      match(DecafParser::SEMI);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(175);
      match(DecafParser::CONTINUE);
      setState(176);
      match(DecafParser::SEMI);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- For_updateContext ------------------------------------------------------------------

DecafParser::For_updateContext::For_updateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DecafParser::LocationContext* DecafParser::For_updateContext::location() {
  return getRuleContext<DecafParser::LocationContext>(0);
}

DecafParser::Assign_exprContext* DecafParser::For_updateContext::assign_expr() {
  return getRuleContext<DecafParser::Assign_exprContext>(0);
}


size_t DecafParser::For_updateContext::getRuleIndex() const {
  return DecafParser::RuleFor_update;
}

void DecafParser::For_updateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFor_update(this);
}

void DecafParser::For_updateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFor_update(this);
}

DecafParser::For_updateContext* DecafParser::for_update() {
  For_updateContext *_localctx = _tracker.createInstance<For_updateContext>(_ctx, getState());
  enterRule(_localctx, 16, DecafParser::RuleFor_update);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(179);
    location();
    setState(180);
    assign_expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Assign_exprContext ------------------------------------------------------------------

DecafParser::Assign_exprContext::Assign_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DecafParser::Assign_opContext* DecafParser::Assign_exprContext::assign_op() {
  return getRuleContext<DecafParser::Assign_opContext>(0);
}

DecafParser::ExprContext* DecafParser::Assign_exprContext::expr() {
  return getRuleContext<DecafParser::ExprContext>(0);
}

DecafParser::IncrementContext* DecafParser::Assign_exprContext::increment() {
  return getRuleContext<DecafParser::IncrementContext>(0);
}


size_t DecafParser::Assign_exprContext::getRuleIndex() const {
  return DecafParser::RuleAssign_expr;
}

void DecafParser::Assign_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign_expr(this);
}

void DecafParser::Assign_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DecafParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign_expr(this);
}

DecafParser::Assign_exprContext* DecafParser::assign_expr() {
  Assign_exprContext *_localctx = _tracker.createInstance<Assign_exprContext>(_ctx, getState());
  enterRule(_localctx, 18, DecafParser::RuleAssign_expr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(186);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DecafParser::ASSIGN:
      case DecafParser::PLUS_ASSIGN:
      case DecafParser::MINUS_ASSIGN:
      case DecafParser::MUL_ASSIGN:
      case DecafParser::DIV_ASSIGN:
      case DecafParser::MOD_ASSIGN: {
        enterOuterAlt(_localctx, 1);
        setState(182);
        assign_op();
        setState(183);
        expr(0);
        break;
      }

      case DecafParser::INCREMENT:
      case DecafParser::DECREMENT: {
        enterOuterAlt(_localctx, 2);
        setState(185);
        increment();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
